# crowdbike

./: .gitignore  .pre-commit-config.yaml  LICENSE  config.json  de-readme.md  readme.md  requirements.txt  setup.cfg
Calibration/: .lint.R  calibrate_temp_hum.R  create_sample_data.R
Code/: FUN.py  calibration.json  check_running.sh  config.json  crowdbike.py  crowdbike_nonGUI.py  log_multiple_sensors.py  main.py  manual.md  nano_cheatSheet.md  readme.md  send2cloud.py  stop_nonGUI.sh
Documentation/: non_gui_setup.md
calib/: calibrate_temp_hum.R  create_sample_data.R  read_multiple.py  readme.md
crowdbike/: calibration.json  helpers.py  log_multiple_sensors.py  main.py  send2cloud.py  sensors.py  stop_log_multiple_sensors.sh  stop_nonGUI.sh  temp_sensors.md
crowdbike/resources/: config.json  theme.json
docs/: nano_cheatSheet.md  temp_sensors.md
tests/: vappress_test.py
