[metadata]
name = crowdbike
version = 0.7.0
description =
    Raspberry Pi Project at University of Freiburg, Environmental Meteorology
    to measure temperature and humidity on bikes and tag measurements with GPS
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/theendlessriver13/Meteobike
author = Andreas Christen, Jonas Kittner
author_email = jonas.kittner@ruhr-uni-bochum.de
license = MIT
license_file = LICENSE
license_files =
    licenses/LICENSE_achristen_Meteobike
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    RPi.GPIO
    adafruit-circuitpython-dht
    adafruit-circuitpython-gps
    pyserial
    sensirion-i2c-sht
    importlib-metadata;python_version<"3.8"
    importlib-resources;python_version<"3.8"
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    crowdbike = crowdbike.main:master

[options.package_data]
crowdbike.resources =
    *.json

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
